--- a/association-news.html
+++ b/association-news.html
@@ -424,7 +424,7 @@
                                             <!-- Association News Inner  -->
                                             <div class="news-inner-wrapper">
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news.png" alt="">
                                                         </div>
@@ -442,7 +442,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news1.png" alt="">
                                                         </div>
@@ -460,7 +460,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news2.png" alt="">
                                                         </div>
@@ -485,7 +485,7 @@
                                             <!-- Association News Inner  -->
                                             <div class="news-inner-wrapper">
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news.png" alt="">
                                                         </div>
@@ -503,7 +503,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news1.png" alt="">
                                                         </div>
@@ -521,7 +521,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news2.png" alt="">
                                                         </div>
@@ -546,7 +546,7 @@
                                             <!-- Association News Inner  -->
                                             <div class="news-inner-wrapper">
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news.png" alt="">
                                                         </div>
@@ -564,7 +564,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news1.png" alt="">
                                                         </div>
@@ -582,7 +582,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news2.png" alt="">
                                                         </div>
@@ -607,7 +607,7 @@
                                             <!-- Association News Inner  -->
                                             <div class="news-inner-wrapper">
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news.png" alt="">
                                                         </div>
@@ -625,7 +625,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news1.png" alt="">
                                                         </div>
@@ -643,7 +643,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news2.png" alt="">
                                                         </div>
@@ -668,7 +668,7 @@
                                             <!-- Association News Inner  -->
                                             <div class="news-inner-wrapper">
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news.png" alt="">
                                                         </div>
@@ -686,7 +686,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news1.png" alt="">
                                                         </div>
@@ -704,7 +704,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news2.png" alt="">
                                                         </div>
@@ -729,7 +729,7 @@
                                             <!-- Association News Inner  -->
                                             <div class="news-inner-wrapper">
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news.png" alt="">
                                                         </div>
@@ -747,7 +747,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news1.png" alt="">
                                                         </div>
@@ -765,7 +765,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="news-box">
-                                                    <a href="#">
+                                                    <a href="./association-news-details.html">
                                                         <div class="image-box">
                                                             <img src="./assets/images/associationnews/news2.png" alt="">
                                                         </div>
